--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,9 @@
     "polyteor-element": "stomybexy/polyteor-element#^0.0.2",
     "iron-input": "PolymerElements/iron-input#^1.0.10",
     "iron-validator-behavior": "PolymerElements/iron-validator-behavior#^1.0.1",
-    "paper-input": "PolymerElements/paper-input#^1.1.11"
+    "paper-input": "PolymerElements/paper-input#^1.1.11",
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.1"
   }
 }
