--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,9 @@
     "paper-input": "PolymerElements/paper-input#^1.1.11",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.1"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.1",
+    "polyteor-auth": "stomybexy/polyteor-auth#^0.0.3",
+    "paper-button": "PolymerElements/paper-button#^1.0.11",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.0.4"
   }
 }
